FIX height on education section causing a display bug with safari + logo language position on mobile

--- a/content/themes/myCV/app/scss/components/_menu.scss
+++ b/content/themes/myCV/app/scss/components/_menu.scss
@@ -195,6 +195,10 @@
         background-color: $special-color;
         border-color: $special-color;
     }
+
+    @media (max-width: $breakpoint-sm) {
+        margin-right: unset;
+    }
 }
 
 .language-sub-menu {
