--- a/content/themes/myCV/app/scss/layout/_education.scss
+++ b/content/themes/myCV/app/scss/layout/_education.scss
@@ -15,6 +15,9 @@
         @media (min-width: $breakpoint-sm) {
             max-width: 100%;
             margin: 10rem 1rem;
+            height: -webkit-fit-content;
+            height: -moz-fit-content;
+            height: fit-content;
         }
     }
 
